[package]
name = "evehypernet-rs"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serenity = { version = "0.12.5", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.9"
poise = "0.6.1"
rfesi = { version = "0.50.0", features = ["rustls-tls", "validate_jwt", "random_state"], default-features = false }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
anyhow = "1.0.101"
actix-web = { version = "4.12.1", features = ["rustls"] }
rand = "0.10.0"
async-trait = "0.1.89"
thousands = "0.2.0"
reqwest = { version = "0.13.2", features = ["rustls", "charset", "http2", "system-proxy", "query"], default-features = false }
